--- a/src/scss/formula.scss
+++ b/src/scss/formula.scss
@@ -3,6 +3,28 @@
 
 .excel {
     &__formula {
-        
+        position: absolute;
+        left: 0;
+        width: 100%;
+        top: $header-height + $toolbar-height;
+        height: $formula-height;
+        display: flex;
+        align-items: center;
+        border: 1px solid $border-color;
+
+        & .info {
+            text-align: center;
+            font-style: italic;    
+            font-size: 1.8rem;
+            border-right: 1px solid $border-color;
+            width: $info-cell-width;
+        } 
+        & .input {
+            width: 100%;
+            height: 100%;
+            padding: 0.5rem 0.3rem;
+            outline: none;
+            font-size: 1.2rem; 
+        }
     }
 }
