--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,7 +16,9 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 62.5%;
+
 }
 .excel {
     position: relative;
+    color: #888;
 }
