--- a/src/scss/toolbar.scss
+++ b/src/scss/toolbar.scss
@@ -10,6 +10,8 @@
         width: 100%;
         border-top: 1px solid $border-color;
         border-bottom: 1px solid $border-color;
+        display: flex;
+        align-items: center;
     }
     & .button {
         @include button(blue);
