--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,7 @@
 @import 'toolbar';
 @import 'formula';
 @import 'table';
-
+@import 'dashboard';
 
 
 * {
@@ -21,4 +21,6 @@ body {
 .excel {
     position: relative;
     color: #888;
+    height: 100%;
+    max-width: 100%;
 }
